--- a/inst/libraries/nvd3/layouts/chart.html
+++ b/inst/libraries/nvd3/layouts/chart.html
@@ -41,6 +41,8 @@
         {{{ x2Axis }}}
         
         {{{ yAxis }}}
+        
+        {{{ y2Axis }}}
       
        d3.select("#" + opts.id)
         .append('svg')
